--- a/part12 Router/src/index.css
+++ b/part12 Router/src/index.css
@@ -14,7 +14,7 @@ nav{
     padding:0.5rem 1rem;
     
 }
-.logo{
+.header-logo{
     width: 9.7rem;
     height: 3rem;
     order: 1;
@@ -60,6 +60,54 @@ nav>.btns{
     border: none;
     font-weight: 600;
 }
+.footer{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 1rem;
+}
+.footer-elements-div{
+    display: flex;
+    gap: 2rem;
+    
+}
+hr{
+    border-color: rgb(255, 255, 255);
+    border-bottom: 0.2px;
+}
+.footer-logo{
+    width: 12rem;
+    height: 4rem;
+}
+.footer h4{
+    font-size: 0.9rem;
+    font-weight: 600;
+}
+.footer ul{
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    gap: 1rem;
+    font-weight: 600;
+    
+}
+.footer a{
+    text-decoration: none;
+
+}
+.footer li{
+    color: gray;
+
+}
+
+
+
+
+
+
+
+
 
 @media (max-width : 1024px) {
 .nav-items-div{
