--- a/Redux Initial Commerce Cart project/src/index.css
+++ b/Redux Initial Commerce Cart project/src/index.css
@@ -1,3 +1,30 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.plus{
+    visibility: hidden;
+}
+.show{
+    visibility: visible;
+    transition: 1s;
+
+}
+.hide{
+    visibility: hidden;
+    transition: 1s;
+
+
+}
+.nav-div{
+}
+
+@media (max-width:768px){
+    .nav-items{
+        visibility: hidden;
+    }
+    .plus{
+        visibility: visible;
+    }
+}
